<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2018 Andreas Leszczynski

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.

   All Rights of the pictures belong to Udacity.
   Pictures were taken from UDACITY.COM
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/activity_padding"
    tools:context="com.example.al.helloandroid.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_udacity"
            android:scaleType="centerCrop"
            android:src="@drawable/project1" />

        <TextView
            style="@style/TextViewStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview2" />

        <TextView
            style="@style/TextViewStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin_horizontal"
            android:layout_marginStart="@dimen/activity_margin_horizontal"
            android:layout_marginTop="@dimen/activity_margin_vertical"
            android:text="@string/company_name" />

        <TextView
            android:id="@+id/street"
            style="@style/TextViewStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin_horizontal"
            android:layout_marginStart="@dimen/activity_margin_horizontal"
            android:text="@string/address" />

        <TextView
            style="@style/TextViewStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin_vertical"
            android:layout_marginLeft="@dimen/activity_margin_horizontal"
            android:layout_marginStart="@dimen/activity_margin_horizontal"
            android:text="@string/phone_no" />

        <Button
            android:id="@+id/url_button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToWebsite"
            android:text="@string/button1" />

    </LinearLayout>
</ScrollView>